Fixed tiny horizontal overscroll issue on mobile

--- a/src/components/Contacts/Contacts.module.scss
+++ b/src/components/Contacts/Contacts.module.scss
@@ -13,7 +13,7 @@
     justify-content: center;
     list-style: none;
     padding: 0;
-    margin: 10px -3px;
+    margin: 10px 0;
 
     &-item {
       padding: 0;
